# BI-Rumah-Sakit-Data-Backend

./: Dockerfile  Pipfile  README.md  config.py  data.py  dummyapi.py  filterdf.py  generateRoutes.py  getdata.py  main.py  preprocess.py  pyproject.toml  run.sh  tools.py
app/fastapi/: __init__.py
app/fastapi/routers/: demografi.py  kunjungan.py  pasien.py  pendapatan.py  test.py  utility.py
app/flaskapp/: data.py  flaskapp.py
app/flaskapp/routes/: __init__.py  autogen.py  demografi.py  kunjungan.py  pasien.py  pendapatan.py  test.py  utility.py
app/flaskapp/utils/: generateroutes.py  optimization.py
computes/: getdata.py  preprocess.py  prophet.py  timeseries_analysis.py
datastore/: file.py  parquet.py  rdbms.py
routes/: __init__.py  autogen.py  demografi.py  kunjungan.py  pasien.py  pendapatan.py  utils.py
sources/: api.py  file.py
tests/: conftest.py  test_computes.py  test_datastore.py  test_performance.py  test_sources.py
utils/: colddata.py  filterdf.py  generateroutes.py  preprocess.py
workers/: pollers.py
