[project]
name = "bi-rumah-sakit-data-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-caching>=2.3.1",
    "flask-cors>=5.0.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pgzip>=0.3.5",
    "prophet>=1.1.6",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]
