[project]
name = "bi-rumah-sakit-data-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "connectorx>=0.4.3",
    "coverage>=7.9.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pgzip>=0.3.5",
    "polars>=1.29.0",
    "prophet>=1.1.6",
    "pyarrow>=20.0.0",
    "pytest>=8.4.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]

[project.optional-dependencies]
flask=[
    "flask>=3.1.0",
    "flask-caching>=2.3.1",
    "flask-cors>=5.0.1",
]
fastapi=[
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
]
psql=[
    "adbc-driver-postgresql>=1.6.0",
    "psycopg2-binary>=2.9.10",
]
sqlite=[
    "adbc-driver-sqlite>=1.6.0",
]
